--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,7 +2,7 @@ name: CD
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 permissions:
   contents: read
@@ -44,9 +44,9 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [ build-and-push ]
+    needs: [build-and-push]
     steps:
-      - name: Deploy via SSH (docker compose pull/up)
+      - name: Deploy via SSH (podman pull/run)
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -56,14 +56,24 @@ jobs:
           script: |
             set -e
 
-            cd /opt/carepath
+            # Ensure podman is installed (Oracle Linux 9)
+            podman --version
 
-            # Login so the server can pull from GHCR (use PAT with read:packages)
-            echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u "${{ github.repository_owner }}" --password-stdin
+            # Pull latest image (your GHCR package is public, so no login needed)
+            podman pull ghcr.io/${{ github.repository_owner }}/carepath:latest
 
-            # Pull latest and restart
-            docker compose pull
-            docker compose up -d
+            # Recreate container
+            podman rm -f carepath || true
+            podman run -d \
+              --name carepath \
+              --restart=always \
+              -p 8000:8000 \
+              -e ENV=prod \
+              -e APP_VERSION=${{ github.sha }} \
+              -e HISTORY_PATH=/data/history.jsonl \
+              -e MAX_HISTORY=30 \
+              -v carepath-data:/data \
+              ghcr.io/${{ github.repository_owner }}/carepath:latest
 
             # Health check (retry)
             for i in 1 2 3 4 5; do
@@ -76,5 +86,5 @@ jobs:
             done
 
             echo "Health check failed after retries"
-            docker compose logs --no-color --tail=200
+            podman logs --tail=200 carepath || true
             exit 1
