--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,13 @@ name: CI
 on:
   pull_request:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      PYTHONPATH: ${{ github.workspace }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -16,6 +18,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: "pip"
+          cache-dependency-path: |
+            requirements.txt
+            requirements-dev.txt
 
       - name: Install deps
         run: |
@@ -26,17 +32,25 @@ jobs:
         run: |
           ruff check .
 
+      - name: Ruff (format check)
+        run: |
+          ruff format --check .
+
+      - name: Dependency security scan (pip-audit)
+        run: |
+          pip-audit -r requirements.txt
+
       - name: Pytest
         run: |
           pytest -q
 
   docker-build:
     runs-on: ubuntu-latest
-    needs: [ test ]
+    needs: [test]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Build Docker image
+      - name: Build Docker image (validates Dockerfile)
         run: |
           docker build -t carepath:ci .
